# tupa

./: .env.example  .gitignore  LICENSE  README.md  ecosystem.config.js  manage.py  pyproject.toml
.claude/: settings.json
.github/workflows/: pr-checks.yml
_bmad-output/planning-artifacts/: COWORK_PROMPT_RODADA_2.md  GO_LIVE_GATE.md  HANDOFF.md  architecture.md  epics-validation-report.md  epics.md  prd-validation-report.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/gds/: config.yaml
_bmad/tea/: config.yaml
apps/accounts/: apps.py  checks.py  decorators.py  forms.py  managers.py  middleware.py  models.py  signals.py  tasks.py  urls.py
apps/ai_providers/: apps.py  exceptions.py  models.py  schemas.py  tasks.py  urls.py  views.py
apps/audit/: apps.py  exceptions.py  managers.py  models.py  services.py  signals.py  utils.py  views.py
apps/core/: apps.py  audit_bridge.py  base_models.py  base_services.py  exceptions.py  fields.py  legal_basis.py  logging.py  middleware.py  models.py  policy_bridge.py  request_context.py  tasks.py  testing.py  types.py  views.py
apps/curriculos/: apps.py  views.py
apps/email_ingestion/: apps.py  views.py
apps/help/: apps.py  views.py
apps/matching/: views.py
apps/notifications/: views.py
apps/policies/: admin.py  exceptions.py  middleware.py  models.py  services.py  urls.py  views.py
apps/requisitions/: apps.py  models.py  services.py  urls.py  views.py
apps/telemetry/: views.py
apps/vagas/: apps.py  models.py  services.py  urls.py  views.py
config/: dramatiq.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
deploy/backup/: backup.sh
docs/prd/: appendix-a-matriz-de-rastreabilidade-jornada-fr-nfr.md  appendix-b-pendncias-dpo-jurdico.md  appendix-c-changelog-deste-prd.md  como-ler-este-documento.md  index.md  (+12 more)
scripts/: rescore_with_embeddings.py  smoke_test_h1.py  smoke_test_h1_batch.py
tests/: conftest.py  test_conftest_fixtures.py
(+106 files in other folders)
